--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,344 +4,12 @@
 @import "./_Variables/footer";
 @import "./_paginas/pagina-index";
 @import "./_paginas/pagina-especialidades";
+@import "./_paginas/pagina-ObrasSociales";
+@import "./_paginas/pagina-contacto";
+@import "./_paginas/pagina-staff";
 @import "./_Variables/icon";
 @import "./_Variables/mediaqueries.scss";
 
 
 
-/*----------------------------------------------------------------- pagina contacto------------------------------------------------------------- */
 
-
-
-
-/* ----------------------------------------------------Pagina Especialidades---------------------------------------------------------------------- */
-
-
-/* --------------------------------------------------------------------Pagina Obras Sociales------------------------------------------------------- */
-
-.contenedorOS {
-    display: flex;
-    height: 50vh;
-    position: relative;
-}
-
-.contenedorOS__img {
-    background-image: url(/Images/Obras-sociales.jfif);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom center;
-    filter: grayscale(100%);
-    width: 100%;
-}
-
-.contenedorOS__bg {
-    top: 0px;
-    position: absolute;
-    background-color: #4586BF;
-    width: 50%;
-    height: 100%;
-    filter: opacity(75%);
-}
-
-.contenedorOS__bg__titulo {
-    position: relative;
-    top: 35%;
-}
-
-.contenedorOS__bg__titulo h1 {
-
-    color:$color-primario;
-    font-family:$fuente-Secundaria;
-    text-transform: uppercase;
-    color: white;
-    text-align: center;
-    margin-top: 45px
-}
-
-.styleOSbt {
-
-    margin-top: 70px;
-}
-
-.styleOSbt_box1 {
-    background-color: #4586BF;
-    border-radius: 10px;
-    text-align: center;
-}
-
-.styleOSbt_box1 a {
-    text-decoration: none;
-}
-
-.styleOSbt_box1:hover {
-    opacity: 80%;
-}
-
-.styleOSbt_box2 {
-    background-color: #78bbf6;
-    border-radius: 10px;
-    text-align: center;
-
-}
-
-.styleOSbt_box2:hover {
-    opacity: 80%;
-}
-
-.styleOSbt_box2 a {
-    text-decoration: none;
-}
-
-.styleOSbt_box3 {
-    background-color: #53A1E6;
-    border-radius: 10px;
-    text-align: center;
-
-}
-
-.styleOSbt_box3:hover {
-    opacity: 80%;
-}
-
-
-.styleOSbt_box3 a {
-    text-decoration: none;
-}
-
-.styleOSbt_box4 {
-    background-color: #498FCC;
-    border-radius: 10px;
-    text-align: center;
-
-}
-
-.styleOSbt_box4:hover {
-    opacity: 80%;
-}
-
-.styleOSbt_box4 a {
-    text-decoration: none;
-}
-
-.styleOSbt_box5 {
-    background-color: #0c5da4;
-    border-radius: 10px;
-    text-align: center;
-
-}
-
-
-.styleOSbt_box5:hover {
-    opacity: 80%;
-}
-
-
-.styleOSbt_box5 a {
-    text-decoration: none;
-}
-
-.styleOSbt_box6 {
-    background-color: #498FCC;
-    border-radius: 10px;
-    text-align: center;
-
-}
-
-
-.styleOSbt_box6:hover {
-    opacity: 80%;
-}
-
-.styleOSbt_box6 a {
-    text-decoration: none;
-}
-
-.styleOSbt_box7 {
-    background-color: #2f6da3;
-    border-radius: 10px;
-    text-align: center;
-
-}
-
-.styleOSbt_box7:hover {
-    opacity: 80%;
-}
-
-.styleOSbt_box7 a {
-    text-decoration: none;
-}
-
-
-.styleOSbt_box8 {
-    background-color: #4586BF;
-    border-radius: 10px;
-    text-align: center;
-
-}
-
-.styleOSbt_box8:hover {
-    opacity: 80%;
-}
-
-.styleOSbt_box8 a {
-    text-decoration: none;
-}
-
-
-/*----------------------------------------------------------Pagina staff -------------------------------------------------------------------------*/
-.containerStaff {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.containerStaff h1 {
-
-    text-align: center;
-    color:$color-primario;
-    font-family: $fuente-principal;
-    margin-top: 160px;
-    margin-bottom: 60px;
-    text-transform: uppercase;
-
-}
-
-.contenedorCard {
-
-    width: 95%;
-    height: 95%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto
-}
-
-.cards {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-    margin-bottom: 30px;
-
-
-}
-
-.cards img {
-
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-
-}
-
-.cards .cards__info {
-    width: 0%;
-    height: 100%;
-    top: 0px;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    background-color:$color-primario;
-    transition: .5s all;
-    border-radius: 10px;
-    opacity: 0.8;
-}
-
-
-.cards__info p {
-    font-size: 18px;
-    text-transform: capitalize;
-    color: white;
-    text-align: center;
-    font-weight: bold;
-}
-
-.cards:hover .cards__info {
-    width: 100%;
-}
-
-.styleRow {
-    background-color: #4586BF;
-    padding: 4rem;
-    border-radius: 10px;
-    align-items: center;
-}
-
-.styleRow h2 {
-    text-transform: uppercase;
-    color: white;
-    text-align: center;
-}
-
-.btnFont h5 {
-
-    font-weight: bold;
-}
-
-
-@media (min-width:769px) and (max-width: 1024px) {
-
-    .contenedorCard {
-
-        display: grid;
-        grid-template-areas: "column1""column2"
-            "filax";
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        row-gap: 10px;
-        column-gap: 10px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .cards__info p {
-        font-size: 20px;
-
-    }
-
-    .cards .cards__info {
-
-        height: 100%
-    }
-
-    .styleRow {
-        padding: 3rem;
-    }
-
-
-}
-
-@media (min-width:1025px) {
-
-    .contenedorCard {
-
-        display: grid;
-        grid-template-areas: "column1""column2"
-            "filax";
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        row-gap: 20px;
-        column-gap: 20px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .cards__info p {
-        font-size: 24px;
-    }
-
-    .containerStaff h1 {
-
-        margin-top: 140px;
-    }
-
-    .cards .cards__info {
-
-        height: 100%
-    }
-
-}
