--- a/scss/_Variables/mediaqueries.scss
+++ b/scss/_Variables/mediaqueries.scss
@@ -229,4 +229,151 @@
 }
 
 
-//------------------------------------------------------------------ pagina index----------------------------------------------------------
+//------------------------------------------------------------------ pagina especialidades----------------------------------------------------------
+
+
+
+@media (min-width:769px) and (max-width: 1024px) {
+
+
+    .containerEspecialidad {
+
+        h1 {
+
+            margin-top: 160px;
+            margin-bottom: 80px;
+        }
+
+
+        .bloqueEspecialidad {
+            display: grid;
+            grid-area: "descripcion""imagen"
+                "imagen""descripacion"
+                "descripcion""imagen"
+                "imagen""descripacion";
+            grid-template-columns: 60% 40%;
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+            column-gap: 10px;
+            row-gap: 10px;
+
+
+            .bloqueEspecialidad__info {
+                margin: 0%;
+
+                h2 {
+                    font-size: 22px;
+                }
+
+                p {
+                    font-size: 18px;
+                }
+
+                li {
+                    font-size: 18px;
+                }
+
+
+            }
+
+            .bloqueEspecialidad__img img {
+                object-fit: cover;
+                width: 100%;
+            }
+
+            .bloqueEspecialidad__img2 {
+                grid-column: 1/2;
+                grid-row: 2/3;
+
+                img {
+                    object-fit: cover;
+                    width: 100%;
+                    border-radius: 10px;
+                }
+
+            }
+
+            .bloqueEspecialidad__img4 {
+                grid-column: 1/2;
+                grid-row: 4/5;
+
+                img {
+
+                    object-fit: cover;
+                    width: 100%;
+                    border-radius: 10px;
+
+                }
+            }
+
+
+        }
+    } 
+}
+
+    @media (min-width:1025px) {
+
+        .containerEspecialidad { 
+            
+            h1 {       margin-top: 160px;
+                margin-bottom: 80px;   }
+
+            .bloqueEspecialidad {
+                display: grid;
+                grid-area: "descripcion""imagen"
+                    "imagen""descripacion"
+                    "descripcion""imagen"
+                    "imagen""descripacion";
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr 1fr 1fr 1fr;
+                column-gap: 20px;
+                row-gap: 20px;
+
+                .bloqueEspecialidad__info {
+                    margin: 0%;
+        
+                    h2 {
+                        font-size: 24px;
+                    }
+
+                    p {
+                        font-size: 20px;
+                    }
+
+                    li {
+                        font-size: 20px;
+                    }
+
+                }
+        
+                .bloqueEspecialidad__img2 {
+                    grid-column: 1/2;
+                    grid-row: 2/3;
+
+                    img {
+                        object-fit: cover;
+                        width: 100%;
+                        border-radius: 10px;
+            
+                    }
+
+                }
+
+                .bloqueEspecialidad__img4 {
+                    grid-column: 1/2;
+                    grid-row: 4/5;
+
+                    img {
+
+                        object-fit: cover;
+                        width: 100%;
+                        border-radius: 10px;
+            
+                    }
+
+                }
+
+            }
+
+        }
+
+    }
