--- a/scss/_paginas/_pagina-index.scss
+++ b/scss/_paginas/_pagina-index.scss
@@ -1,3 +1,6 @@
+/*----------------------------------------------------------Pagina Index -------------------------------------------------------------------------*/
+
+
 .carousel-item {
     min-height: 100vh;
     background-repeat: no-repeat;
@@ -56,7 +59,7 @@
 }
 
 
-/* ----------------------------------------------------------Main| Nosotros--------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------- */
 
 .infoNosotros {
     display: flex;
@@ -126,7 +129,7 @@
 
 }
 
-/* -----------------------------------------------------------------------------Valoraciones ------------------------------------------------------*/
+/* ------------------------------------------------------------------------- */
 .contenedorValoraciones {
 
     h2 {
