--- a/scss/_Variables/mediaqueries.scss
+++ b/scss/_Variables/mediaqueries.scss
@@ -1,4 +1,4 @@
-//------------------------------------------------------------------Sección Carrusel----------------------------------------------------------
+//------------------------------------------------------------------Página Index----------------------------------------------------------
 
 
 @media (min-width:769px) and (max-width:1024px) {
@@ -66,7 +66,7 @@
 }
 
 
-//------------------------------------------------------------------Sección Info----------------------------------------------------------
+//--------------------------------------------------
 
 
 @media (min-width:769px) and (max-width:1024px) {
@@ -176,7 +176,7 @@
 
 }
 
-//------------------------------------------------------------------Sección Valoraciones----------------------------------------------------------
+//----------------------------------------------
 
 
 @media (min-width:769px) and (max-width:1024px) {
@@ -376,4 +376,148 @@
 
         }
 
+    }
+
+    //------------------------------------------------------------------ pagina Staff----------------------------------------------------------
+
+
+    @media (min-width:769px) and (max-width: 1024px) {
+
+        .contenedorCard {
+    
+            display: grid;
+            grid-template-areas: "column1""column2"
+                "filax";
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            row-gap: 10px;
+            column-gap: 10px;
+            margin-left: auto;
+            margin-right: auto;
+    
+            .cards {
+    
+                .cards__info {
+    
+                    height: 100%
+                }
+    
+                .cards__info {
+    
+                    p {
+                        font-size: 20px;
+    
+                    }
+    
+                }
+            }
+    
+        }
+    
+        .styleRow {
+            padding: 3rem;
+        }
+    }
+    
+    @media (min-width:1025px) {
+    
+        .containerStaff {
+    
+            h1 {
+                margin-top: 140px;
+            }
+    
+    
+            .contenedorCard {
+    
+                display: grid;
+                grid-template-areas: "column1""column2"
+                    "filax";
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                row-gap: 20px;
+                column-gap: 20px;
+                margin-left: auto;
+                margin-right: auto;
+    
+                .cards {
+    
+                    .cards__info {
+    
+                        height: 100%;
+    
+    
+                        p {
+                            font-size: 24px;
+                        }
+                    }
+    
+                }
+    
+    
+    
+            }
+    
+        }
+    }
+
+    //------------------------------------------------------------------ pagina Contacto----------------------------------------------------------
+
+    @media (min-width:769px) and (max-width: 1024px) {
+
+        .formulario {
+            width: 80%;
+    
+            .formulario__legend {
+    
+                font-size: 20px;
+            }
+            .formulario__label__hijo {
+    
+                font-size: 20px;
+        
+            }
+        
+            .formulario__label__input {
+                padding: 5px
+            }
+    
+            .contenedorBtn__boton {
+    
+                font-size: 16px;
+        
+            }
+    
+        }
+    
+    }
+    
+    @media (min-width:1025px) {
+    
+        .formulario {
+            background-color: rgba(245, 245, 245, 70%);
+            border-radius: 10px;
+            margin: 230px auto;
+            width: 70%;
+    
+    
+            .formulario__legend {
+    
+                font-size: 24px;
+                margin-top: 10px;
+            }
+    
+            .formulario__label__hijo {
+                font-size: 20px;
+                margin: 10px 0;
+            }
+    
+            .contenedorBtn__boton {
+    
+                padding: 18px;
+                font-size: 16px;
+            }
+        
+        }
+    
     }
