--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,4 +1,6 @@
 @import "./_Variables/variables";
+@import "./_Variables/map";
+@import "./_Variables/mixins";
 @import "./_Variables/header";
 @import "./_Variables/fuentes";
 @import "./_Variables/footer";
@@ -8,7 +10,8 @@
 @import "./_paginas/pagina-contacto";
 @import "./_paginas/pagina-staff";
 @import "./_Variables/icon";
-@import "./_Variables/mediaqueries.scss";
+@import "./_Variables/mediaqueries";
+
 
 
 
