--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -38,28 +38,28 @@ footer {
 
 .bloqueFooter {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   background-color: #F5F5F5;
   align-items: center;
   justify-content: center; }
   .bloqueFooter .bloqueFooter__logo {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
     justify-content: center;
     align-items: center; }
   .bloqueFooter .bloqueFooter__contacto {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
     margin: 20px; }
   .bloqueFooter .bloqueFooter__RRSS {
     margin-top: 20px;
     margin-bottom: 20px;
     display: flex;
-    flex-direction: column; }
+    justify-content: center; }
   .bloqueFooter .bloqueFooter__mapa {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center; }
 
 .bloqueFooter__logo img {
@@ -102,7 +102,7 @@ footer {
       margin: 0; }
     .bloqueFooter .bloqueFooter__RRSS {
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
       justify-content: center;
       margin-left: 20px;
@@ -131,7 +131,7 @@ footer {
     grid-template-columns: 1fr 2fr 2fr 1fr; }
     .bloqueFooter .bloqueFooter__RRSS {
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
       justify-content: center; }
     .bloqueFooter .bloqueFooter__mapa {
@@ -182,7 +182,7 @@ footer {
     font-style: Bolder; }
   .carouselInfo .carouselInfo__btn {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
     justify-content: flex-start;
     margin-left: 20px;
     margin-top: 10px;
@@ -197,7 +197,7 @@ footer {
 /* ------------------------------------------------------------------------- */
 .infoNosotros {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   margin-top: 50px;
   margin-left: 15px;
   margin-right: 15px; }
@@ -250,7 +250,7 @@ footer {
   border-radius: 10px; }
   .contenedorValoraciones .valoracion .valoracion__texto {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
     justify-content: center;
     align-items: center;
     overflow: auto; }
@@ -262,7 +262,7 @@ footer {
       text-align: left; }
       .contenedorValoraciones .valoracion .valoracion__texto p .valoracion__cita {
         display: flex;
-        flex-direction: row;
+        justify-content: center;
         justify-content: center;
         font-style: italic;
         text-transform: capitalize;
@@ -325,15 +325,15 @@ footer {
   position: relative; }
   .contenedorOS .contenedorOS__img {
     background-image: url(/Images/Obras-sociales.jfif);
-    background-repeat: no-repeat;
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: bottom center;
     filter: grayscale(100%);
     width: 100%; }
   .contenedorOS .contenedorOS__bg {
     top: 0px;
     position: absolute;
-    background-color: #4586BF;
+    background-color: #4586bf;
     width: 50%;
     height: 100%;
     filter: opacity(75%); }
@@ -351,7 +351,7 @@ footer {
 .styleOSbt {
   margin-top: 70px; }
   .styleOSbt .styleOSbt_box1 {
-    background-color: #4586BF;
+    background-color: #4586bf;
     border-radius: 10px;
     text-align: center; }
     .styleOSbt .styleOSbt_box1 a {
@@ -407,7 +407,7 @@ footer {
     .styleOSbt .styleOSbt_box7 a {
       text-decoration: none; }
   .styleOSbt .styleOSbt_box8 {
-    background-color: #4586BF;
+    background-color: #4586bf;
     border-radius: 10px;
     text-align: center; }
     .styleOSbt .styleOSbt_box8:hover {
@@ -420,8 +420,7 @@ footer {
   background-image: url(../Images/Fondo-contacto.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: bottom center;
-  max-width: 100%; }
+  background-position: bottom center; }
   .contenedorContacto .pruebaflex {
     display: flex;
     flex-direction: row; }
