--- a/scss/_Variables/_footer.scss
+++ b/scss/_Variables/_footer.scss
@@ -1,24 +1,24 @@
 footer {
-  background-color:  #4586bf;
+  background-color:   map-get($map: $palette-colors, $key: primary-color );;
 }
 
 .bloqueFooter {
-  display: flex;
-  flex-direction: column;
+  @include flex-direction(column);
+
   background-color: #F5F5F5;
   align-items: center;
   justify-content: center;
 
   .bloqueFooter__logo {
-    display: flex;
-    flex-direction: row;
+    @include flex-direction(flex);
+
     justify-content: center;
     align-items: center;
   }
 
   .bloqueFooter__contacto {
-    display: flex;
-    flex-direction: column;
+    @include flex-direction(column);
+
     align-items: center;
     margin: 20px;
   }
@@ -26,13 +26,13 @@ footer {
   .bloqueFooter__RRSS {
     margin-top: 20px;
     margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
+    @include flex-direction(column);
+
   }
 
   .bloqueFooter__mapa {
-    display: flex;
-    flex-direction: column;
+    @include flex-direction(column);
+
     align-items: center;
 
   }
@@ -46,13 +46,13 @@ footer {
 
 
 .bloqueFooter__contacto h3 {
-  color:#4586bf;
+  color: map-get($map: $palette-colors, $key: primary-color );;
   margin-bottom: 10px;
   font-size: 16px;
 }
 
 .bloqueFooter__RRSS h3 {
-  color: #4586bf;
+  color:  map-get($map: $palette-colors, $key: primary-color );;
   text-transform: capitalize;
   font-size: 16px;
   text-align: center;
@@ -60,7 +60,7 @@ footer {
 }
 
 .bloqueFooter__contacto p {
-  color:  #4586bf;
+  color:   map-get($map: $palette-colors, $key: primary-color );;
   font-size: 14px;
   margin-bottom: 5px;
 }
@@ -87,8 +87,8 @@ footer {
     }
 
     .bloqueFooter__RRSS {
-      display: flex;
-      flex-direction: column;
+      @include flex-direction(column);
+
       align-items: center;
       justify-content: center;
       margin-left: 20px;
@@ -133,8 +133,7 @@ footer {
 
 
     .bloqueFooter__RRSS {
-      display: flex;
-      flex-direction: column;
+      @include flex-direction(column);
       align-items: center;
       justify-content: center;
     }
