--- a/scss/_paginas/_pagina-index.scss
+++ b/scss/_paginas/_pagina-index.scss
@@ -37,8 +37,7 @@
     }
 
     .carouselInfo__btn {
-        display: flex;
-        flex-direction: row;
+        @include flex-direction(row);
         justify-content: flex-start;
         margin-left: 20px;
         margin-top: 10px;
@@ -62,8 +61,7 @@
 /* ------------------------------------------------------------------------- */
 
 .infoNosotros {
-    display: flex;
-    flex-direction: column;
+    @include flex-direction(column);
     margin-top: 50px;
     margin-left: 15px;
     margin-right: 15px;
@@ -148,8 +146,7 @@
         border-radius: 10px;
 
         .valoracion__texto {
-            display: flex;
-            flex-direction: row;
+            @include flex-direction(row);
             justify-content: center;
             align-items: center;
             overflow: auto;
@@ -162,8 +159,7 @@
                 text-align: left;
 
                 .valoracion__cita {
-                    display: flex;
-                    flex-direction: row;
+                    @include flex-direction(row);
                     justify-content: center;
                     font-style: italic;
                     text-transform: capitalize;
