--- a/scss/_Variables/_map.scss
+++ b/scss/_Variables/_map.scss
@@ -6,3 +6,11 @@ $palette-colors: (
     white-color: #F5F5F5,
 color-blue-transparent: #4586bfd7
 );
+
+
+$main-fonts: (
+
+f-main:  'Mukta', sans-serif,
+f-secondary: 'Fira Sans Condensed', sans-serif
+
+);
