--- a/scss/_Variables/mediaqueries.scss
+++ b/scss/_Variables/mediaqueries.scss
@@ -10,8 +10,8 @@
             margin-left: 30px;
             margin-top: 20px;
             text-transform: uppercase;
-            color: $color-primario;
-            font-family: $fuente-Secundaria;
+            color: map-get($map: $palette-colors , $key: primary-color );
+            font-family:map-get($map: $main-fonts , $key: f-secondary );
             margin-bottom: 8px;
             font-size: 34px;
             font-style: Bolder;
@@ -42,8 +42,8 @@
             margin-left: 60px;
             margin-top: 50px;
             text-transform: uppercase;
-            color: $color-primario;
-            font-family: $fuente-Secundaria;
+            color: map-get($map: $palette-colors , $key: primary-color );
+            font-family:map-get($map: $main-fonts , $key: f-secondary );
             margin-bottom: 8px;
             font-size: 38px;
             font-style: Bolder;
