--- a/scss/_paginas/_pagina-contacto.scss
+++ b/scss/_paginas/_pagina-contacto.scss
@@ -7,8 +7,7 @@
 @include background-image-prop;
 
     .pruebaflex {
-        display: flex;
-        flex-direction: row;
+        @include flex-direction(row);
 
         .formulario {
             background-color: map-get($map: $palette-colors , $key: secondary-color );
@@ -23,7 +22,7 @@
 
 
                 .formulario__legend {
-                    font-family: 'Mukta', sans-serif;
+                    font-family: map-get($map: $main-fonts, $key: f-main);
                     text-align: center;
                     text-transform: uppercase;
                     font-weight: bold;
@@ -32,8 +31,7 @@
                 }
 
                 .formulario__label {
-                    display: flex;
-                    flex-direction: column;
+                   @include flex-direction(column);
                     padding-left: 20px;
                     padding-right: 20px;
 
@@ -44,7 +42,7 @@
                         margin-top: 5px;
                         text-transform: capitalize;
                         font-weight: 500;
-                        font-family: $fuente-Secundaria;
+                        font-family: map-get($map: $main-fonts , $key: f-secondary )
 
                     }
 
@@ -66,10 +64,8 @@
                 }
 
                 .contenedorBtn {
-                    display: flex;
-                    flex-direction: row;
+                    @include flex-direction (row);
                     align-items: center;
-                    justify-content: center;
 
                     .contenedorBtn__hijo {
                         margin-top: 8px;
@@ -83,7 +79,7 @@
                             border-style: none;
                             background-color: map-get($map: $palette-colors, $key:primary-color);
                             color: white;
-                            font-style: $fuente-Secundaria;
+                            font-style:map-get($map: $main-fonts , $key: f-secondary );
                             text-transform: uppercase;
                             font-weight: 600;
 
