--- a/scss/_paginas/_pagina-especialidades.scss
+++ b/scss/_paginas/_pagina-especialidades.scss
@@ -2,12 +2,11 @@
 
 
 .containerEspecialidad {
-    display: flex;
-    flex-direction: column;
+   @include flex-direction (column);
     margin-bottom: 30px;
 
     h1 {
-        color: $color-primario;
+        color:map-get($map: $palette-colors, $key: primary-color );
         text-transform: uppercase;
         margin-top: 100px;
         margin-bottom: 30px;
@@ -15,14 +14,12 @@
     }
 
     .bloqueEspecialidad {
-        display: flex;
-        flex-direction: column;
-
+        @include flex-direction(column);
         .bloqueEspecialidad__info {
             margin-top: 20px;
 
             h2 {
-                background-color: $color-primario;
+                background-color:map-get($map: $palette-colors, $key: primary-color );
                 text-align: center;
                 padding: 15px;
                 text-transform: uppercase;
