--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,5 +1,6 @@
 @import "./_Variables/variables";
 @import "./_Variables/map";
+@import "./_Variables/extends";
 @import "./_Variables/mixins";
 @import "./_Variables/header";
 @import "./_Variables/fuentes";
