--- a/scss/_paginas/_pagina-especialidades.scss
+++ b/scss/_paginas/_pagina-especialidades.scss
@@ -50,29 +50,20 @@
         }
 
         .bloqueEspecialidad__img img {
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
+        @include objectFit-w-h;
         }
 
         .bloqueEspecialidad__img2 img {
+            @include objectFit-w-h;
 
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
 
 
         }
 
 
         .bloqueEspecialidad__img4 img {
+            @include objectFit-w-h;
 
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
 
         }
 
