--- a/scss/_Variables/_mediaqueries.scss
+++ b/scss/_Variables/_mediaqueries.scss
@@ -10,8 +10,8 @@
             margin-left: 30px;
             margin-top: 20px;
             text-transform: uppercase;
-            color: map-get($map: $palette-colors , $key: primary-color );
-            font-family:map-get($map: $main-fonts , $key: f-secondary );
+            color: map-get($map: $palette-colors , $key: primary-color);
+            font-family: map-get($map: $main-fonts , $key: f-secondary);
             margin-bottom: 8px;
             font-size: 34px;
             font-style: Bolder;
@@ -40,8 +40,8 @@
             margin-left: 60px;
             margin-top: 50px;
             text-transform: uppercase;
-            color: map-get($map: $palette-colors , $key: primary-color );
-            font-family:map-get($map: $main-fonts , $key: f-secondary );
+            color: map-get($map: $palette-colors , $key: primary-color);
+            font-family: map-get($map: $main-fonts , $key: f-secondary);
             margin-bottom: 8px;
             font-size: 38px;
             font-style: Bolder;
@@ -295,65 +295,65 @@
 
 
         }
-    } 
+    }
 }
 
-    @media (min-width:1025px) {
+@media (min-width:1025px) {
 
-        .containerEspecialidad { 
-            
-            h1 {       margin-top: 160px;
-                margin-bottom: 80px;   }
+    .containerEspecialidad {
 
-            .bloqueEspecialidad {
-                display: grid;
-                grid-area: "descripcion""imagen"
-                    "imagen""descripacion"
-                    "descripcion""imagen"
-                    "imagen""descripacion";
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: 1fr 1fr 1fr 1fr;
-                column-gap: 20px;
-                row-gap: 20px;
+        h1 {
+            margin-top: 160px;
+            margin-bottom: 80px;
+        }
 
-                .bloqueEspecialidad__info {
-                    margin: 0%;
-        
-                    h2 {
-                        font-size: 24px;
-                    }
+        .bloqueEspecialidad {
+            display: grid;
+            grid-area: "descripcion""imagen"
+                "imagen""descripacion"
+                "descripcion""imagen"
+                "imagen""descripacion";
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+            column-gap: 20px;
+            row-gap: 20px;
 
-                    p {
-                        font-size: 20px;
-                    }
+            .bloqueEspecialidad__info {
+                margin: 0%;
 
-                    li {
-                        font-size: 20px;
-                    }
-
-                }
-        
-                .bloqueEspecialidad__img2 {
-                    grid-column: 1/2;
-                    grid-row: 2/3;
-
-                    img {
-                        @include objectFit-w-h;
-
-            
-                    }
-
+                h2 {
+                    font-size: 24px;
                 }
 
-                .bloqueEspecialidad__img4 {
-                    grid-column: 1/2;
-                    grid-row: 4/5;
+                p {
+                    font-size: 20px;
+                }
 
-                    img {
-        @include objectFit-w-h;
+                li {
+                    font-size: 20px;
+                }
 
-            
-                    }
+            }
+
+            .bloqueEspecialidad__img2 {
+                grid-column: 1/2;
+                grid-row: 2/3;
+
+                img {
+                    @include objectFit-w-h;
+
+
+                }
+
+            }
+
+            .bloqueEspecialidad__img4 {
+                grid-column: 1/2;
+                grid-row: 4/5;
+
+                img {
+                    @include objectFit-w-h;
+
 
                 }
 
@@ -363,146 +363,149 @@
 
     }
 
-    //------------------------------------------------------------------ pagina Staff----------------------------------------------------------
+}
+
+//------------------------------------------------------------------ pagina Staff----------------------------------------------------------
 
 
-    @media (min-width:769px) and (max-width: 1024px) {
+@media (min-width:769px) and (max-width: 1024px) {
+
+
+
+    .contenedorCard {
+
+        display: grid;
+        grid-template-areas: "column1""column2"
+            "filax";
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        row-gap: 10px;
+        column-gap: 10px;
+        margin-left: auto;
+        margin-right: auto;
+
+        .cards {
+
+            .cards__info {
+
+                height: 100%
+            }
+
+            .cards__info {
+
+                p {
+                    font-size: 20px;
+                }
+            }
+        }
+
+    }
+
+    .styleRow {
+        padding: 3rem;
+    }
+}
+
+@media (min-width:1025px) {
+
+    .containerStaff {
+
+        h1 {
+            margin-top: 140px;
+        }
+
 
         .contenedorCard {
-    
+
             display: grid;
             grid-template-areas: "column1""column2"
                 "filax";
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 1fr 1fr;
-            row-gap: 10px;
-            column-gap: 10px;
+            row-gap: 20px;
+            column-gap: 20px;
             margin-left: auto;
             margin-right: auto;
-    
+
             .cards {
-    
+
                 .cards__info {
-    
-                    height: 100%
-                }
-    
-                .cards__info {
-    
+
+                    height: 100%;
+
+
                     p {
-                        font-size: 20px;
-    
+                        font-size: 24px;
                     }
-    
                 }
+
             }
-    
+
+
+
         }
-    
-        .styleRow {
-            padding: 3rem;
-        }
+
     }
-    
-    @media (min-width:1025px) {
-    
-        .containerStaff {
-    
-            h1 {
-                margin-top: 140px;
-            }
-    
-    
-            .contenedorCard {
-    
-                display: grid;
-                grid-template-areas: "column1""column2"
-                    "filax";
-                grid-template-columns: 1fr 1fr 1fr;
-                grid-template-rows: 1fr 1fr;
-                row-gap: 20px;
-                column-gap: 20px;
-                margin-left: auto;
-                margin-right: auto;
-    
-                .cards {
-    
-                    .cards__info {
-    
-                        height: 100%;
-    
-    
-                        p {
-                            font-size: 24px;
-                        }
-                    }
-    
-                }
-    
-    
-    
-            }
-    
+}
+
+//------------------------------------------------------------------ pagina Contacto----------------------------------------------------------
+
+@media (min-width:769px) and (max-width: 1024px) {
+
+    .formulario {
+        width: 80%;
+
+        .formulario__legend {
+
+            font-size: 20px;
         }
+
+        .formulario__label__hijo {
+
+            font-size: 20px;
+
+        }
+
+        .formulario__label__input {
+            padding: 5px
+        }
+
+        .contenedorBtn__boton {
+
+            font-size: 16px;
+
+        }
+
     }
 
-    //------------------------------------------------------------------ pagina Contacto----------------------------------------------------------
+}
 
-    @media (min-width:769px) and (max-width: 1024px) {
+@media (min-width:1025px) {
 
-        .formulario {
-            width: 80%;
-    
-            .formulario__legend {
-    
-                font-size: 20px;
-            }
-            .formulario__label__hijo {
-    
-                font-size: 20px;
-        
-            }
-        
-            .formulario__label__input {
-                padding: 5px
-            }
-    
-            .contenedorBtn__boton {
-    
-                font-size: 16px;
-        
-            }
-    
+    .formulario {
+        background-color: rgba(245, 245, 245, 70%);
+        border-radius: 10px;
+        margin: 230px auto;
+        width: 70%;
+
+
+        .formulario__legend {
+
+            font-size: 24px;
+            margin-top: 10px;
         }
-    
-    }
-    
-    @media (min-width:1025px) {
-    
-        .formulario {
-            background-color: rgba(245, 245, 245, 70%);
-            border-radius: 10px;
-            margin: 230px auto;
-            width: 70%;
-    
-    
-            .formulario__legend {
-    
-                font-size: 24px;
-                margin-top: 10px;
-            }
-    
-            .formulario__label__hijo {
-                font-size: 20px;
-                margin: 10px 0;
-            }
-    
-            .contenedorBtn__boton {
-    
-                padding: 18px;
-                font-size: 16px;
-            }
-        
+
+        .formulario__label__hijo {
+            font-size: 20px;
+            margin: 10px 0;
         }
-    
+
+        .contenedorBtn__boton {
+
+            padding: 18px;
+            font-size: 16px;
+        }
+
     }
+
+}
