--- a/scss/_paginas/_pagina-contacto.scss
+++ b/scss/_paginas/_pagina-contacto.scss
@@ -83,6 +83,13 @@
                             text-transform: uppercase;
                             font-weight: 600;
 
+
+                            &:hover {
+                                transition: ease 0.5s;
+                                  background-color:  #f5f5f5B3 ;
+                                  color:  #4586bf;
+                                }
+
                         }
                     }
 
