--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -321,6 +321,12 @@ color: white;
   height: 100%;
 }
 
+.spaninfo{
+color: #4586BF;
+font-weight:500
+
+}
+
 /* ------------------------------------------------------------------------- */
 .contenedorValoraciones{
 margin-top: 50px ;
@@ -609,7 +615,7 @@ margin-bottom: 50px ;
 }
 
 .contenedorContacto .pruebaflex .formulario {
-  background-color: #f5f5f5B3;
+  background-color: #f5f5f5cb;
   border-radius: 10px;
   margin-top: 150px ;
   margin-left: auto;
@@ -630,6 +636,7 @@ margin-bottom: 50px ;
   font-weight: bold;
   font-size: 20px;
   color: #4586bf;
+  text-shadow: 1px 2px #498FCC;
 }
 
 .contenedorContacto .pruebaflex .formulario .formulario__fieldset .formulario__label {
