--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -39,6 +39,7 @@ body {
 
 .navLink:hover {
   text-decoration: underline;
+  color: #4586bf;
 }
 
 .navLink:visited {
@@ -92,10 +93,10 @@ footer {
   align-items: center;
 }
 
-.bloqueFooter__logo{
-margin-top: 10px;
-margin-left: auto;
-margin-right: auto;
+.bloqueFooter__logo {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
 
 
 }
@@ -116,6 +117,8 @@ margin-right: auto;
   font-size: 16px;
   text-align: center;
   margin-bottom: 10px;
+  margin-left:100px ;
+  margin-right:100px ;
 }
 
 .bloqueFooter__contacto p {
@@ -172,6 +175,8 @@ margin-right: auto;
     font-size: 18px;
     text-align: center;
     margin-bottom: 10px;
+    margin-left:10px ;
+    margin-right:10px ;
   }
 
   .footerLegal {
@@ -182,10 +187,10 @@ margin-right: auto;
     width: 40vh;
   }
 
-  
-.bloqueFooter__logo img {
-  width: 90px;
-}
+
+  .bloqueFooter__logo img {
+    width: 90px;
+  }
 
 }
 
@@ -221,6 +226,8 @@ margin-right: auto;
     font-size: 20px;
     text-align: center;
     margin-bottom: 10px;
+    margin-right: 55px;
+    margin-left: 55px;
   }
 
   .footerLegal {
@@ -234,13 +241,17 @@ margin-right: auto;
   .bloqueFooter__logo img {
     width: 100px;
   }
-  
+
 
 }
 
 /*----------------------------------------------------------Pagina Index -------------------------------------------------------------------------*/
+.secciónCarrousel{
+margin-top: 14vh;
+}
+
 .carousel-inner {
-  height: 100vh;
+  height: 86vh;
 }
 
 .carousel-item img {
@@ -286,6 +297,7 @@ margin-right: auto;
   margin-top: 10px;
   gap: 10px;
 }
+
 .carouselInfo .carouselInfo__btn button {
   color: #4586bf;
   border: none;
@@ -293,13 +305,16 @@ margin-right: auto;
   border-radius: 8px;
   font-size: 16px;
 }
-.hover-btn:hover{
-background-color: #4586BF;
-transition: ease 1s;
+
+.hover-btn:hover {
+  background-color: #4586BF;
+  transition: ease 1s;
 }
-.carouselInfo__btn button:hover{
-color: white;
+
+.carouselInfo__btn button:hover {
+  color: white;
 }
+
 /* ------------------------------------------------------------------------- */
 .infoNosotros {
   display: flex;
@@ -354,16 +369,15 @@ color: white;
   height: 100%;
 }
 
-.spaninfo{
-color: #4586BF;
-font-weight:500
-
+.subInfo {
+  color: #4586BF;
+  font-weight: 500
 }
 
 /* ------------------------------------------------------------------------- */
-.contenedorValoraciones{
-margin-top: 50px ;
-margin-bottom: 50px ;
+.contenedorValoraciones {
+  margin-top: 50px;
+  margin-bottom: 50px;
 
 }
 
@@ -650,7 +664,7 @@ margin-bottom: 50px ;
 .contenedorContacto .pruebaflex .formulario {
   background-color: #f5f5f5cb;
   border-radius: 10px;
-  margin-top: 150px ;
+  margin-top: 150px;
   margin-left: auto;
   margin-right: auto;
   width: 90%;
@@ -668,8 +682,8 @@ margin-bottom: 50px ;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 20px;
-  color: #4586bf;
-  text-shadow: 1px 2px #498FCC;
+  color:#336489;
+
 }
 
 .contenedorContacto .pruebaflex .formulario .formulario__fieldset .formulario__label {
@@ -680,12 +694,13 @@ margin-bottom: 50px ;
 }
 
 .contenedorContacto .pruebaflex .formulario .formulario__fieldset .formulario__label .formulario__label__hijo {
-  color: #4586bf;
+  color: #336489;
   margin-bottom: 5px;
   margin-top: 5px;
   text-transform: capitalize;
   font-weight: 500;
   font-family: "Fira Sans Condensed", sans-serif;
+
 }
 
 .contenedorContacto .pruebaflex .formulario .formulario__fieldset .formulario__label .formulario__label__input {
@@ -728,9 +743,9 @@ margin-bottom: 50px ;
 }
 
 .contenedorContacto .pruebaflex .formulario .formulario__fieldset .contenedorBtn .contenedorBtn__hijo .contenedorBtn__boton:hover {
-transition: ease 0.5s;
-  background-color:  #f5f5f5B3 ;
-  color:  #4586bf;
+  transition: ease 0.5s;
+  background-color: #f5f5f5B3;
+  color: #4586bf;
 }
 
 
@@ -864,6 +879,15 @@ transition: ease 0.5s;
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
+
+  .secciónCarrousel{
+    margin-top: 15.5vh;
+    }
+    
+    .carousel-inner {
+      height: 84.5vh;
+    }
+
   .carouselInfo {
     width: 40%;
   }
@@ -891,20 +915,29 @@ transition: ease 0.5s;
 }
 
 @media (min-width: 1025px) {
+
+  .secciónCarrousel{
+    margin-top: 10vh;
+    }
+    
+    .carousel-inner {
+      height: 90vh;
+    }
+
   .carouselInfo {
     width: 50%;
   }
 
   .carouselInfo h1 {
     margin-left: 60px;
-    margin-top: 130px;
+    margin-top: 10px;
     text-transform: uppercase;
     color: #4586bf;
     font-family: "Fira Sans Condensed", sans-serif;
     margin-bottom: 8px;
     font-size: 50px;
     font-style: Bolder;
-    line-height: 80px;
+    line-height: 70px;
   }
 
   .carouselInfo .carouselInfo__btn {
@@ -995,7 +1028,7 @@ transition: ease 0.5s;
 
   .contenedorValoraciones {
     margin-top: 70px;
-  margin-bottom: 70px;
+    margin-bottom: 70px;
   }
 
   .contenedorValoraciones h2 {
@@ -1016,8 +1049,9 @@ transition: ease 0.5s;
 
   .contenedorValoraciones {
     margin-top: 100px;
-  margin-bottom: 100px;
+    margin-bottom: 100px;
   }
+
   .contenedorValoraciones h2 {
     margin-top: 25px;
     font-size: 24px;
@@ -1147,7 +1181,7 @@ transition: ease 0.5s;
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-  .containerStaff .contenedorCard{
+  .containerStaff .contenedorCard {
     display: grid;
     grid-template-areas: "column1""column2""filax";
     grid-template-columns: 1fr 1fr 1fr;
@@ -1210,14 +1244,14 @@ transition: ease 0.5s;
     width: 80%;
   }
 
-  .contenedorContacto .pruebaflex .formulario{
-margin: 380px, auto
+  .contenedorContacto .pruebaflex .formulario {
+    margin: 380px, auto
   }
 
   .contenedorContacto .pruebaflex .formulario .formulario__fieldset .formulario__legend {
 
     font-size: 25px;
-  
+
   }
 
   .formulario .formulario__label__hijo {
@@ -1241,9 +1275,9 @@ margin: 380px, auto
     width: 70%;
   }
 
-  .contenedorContacto .pruebaflex .formulario{
+  .contenedorContacto .pruebaflex .formulario {
 
-margin-bottom: 30px;
+    margin-bottom: 30px;
 
   }
 
@@ -1271,26 +1305,26 @@ margin-bottom: 30px;
 @media (max-width: 769px) and (min-width:1024px) {
 
   .contenedorOS {
-    height: 70vh;}
-
-    .contenedorOS .contenedorOS__img {
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-
+    height: 70vh;
   }
 
+  .contenedorOS .contenedorOS__img {
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 
-  @media (min-width:1025px) {
-
-    .contenedorOS {
-      height: 70vh;}
-  
-      .contenedorOS .contenedorOS__img {
-        background-repeat: no-repeat;
-        background-position: center;
-      }
-  
-    }
+}
 
 
+@media (min-width:1025px) {
+
+  .contenedorOS {
+    height: 70vh;
+  }
+
+  .contenedorOS .contenedorOS__img {
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+}
