--- a/scss/_Variables/_header.scss
+++ b/scss/_Variables/_header.scss
@@ -10,7 +10,7 @@
 .navLink {
     margin-left: 20px;
     text-decoration: none;
-    font-family:  map-get($map: $main-fonts, $key: f-main);;
+    font-family:  map-get($map: $main-fonts, $key: f-main);
     text-transform: uppercase;
     font-weight: bolder;
     font-size: 20px;
