--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -371,7 +371,9 @@ margin-top: 14vh;
 
 .subInfo {
   color: #4586BF;
-  font-weight: 500
+  font-size: 16px;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight:lighter
 }
 
 /* ------------------------------------------------------------------------- */
@@ -985,6 +987,11 @@ margin-top: 14vh;
     grid-column: 1/2;
     grid-row: 2/4;
   }
+
+  .subInfo {
+    font-size: 18px;
+  }
+
 }
 
 @media (min-width: 1025px) {
@@ -1022,6 +1029,12 @@ margin-top: 14vh;
     grid-column: 1/2;
     grid-row: 2/4;
   }
+
+
+  .subInfo {
+    font-size: 22px;
+  }
+
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
