--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -919,7 +919,7 @@ margin-top: 14vh;
 @media (min-width: 1025px) {
 
   .secciónCarrousel{
-    margin-top: 10vh;
+    margin-top: 90px;
     }
     
     .carousel-inner {
